Revised original seasons site

--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
         <title>Flowers | Seasons Lawn Care</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
-        <h1>Spring Flowers</h1>
-        <img url="https://cdn.shopify.com/s/files/1/1334/4597/products/domesticblonde_2_x1200.progressive.jpg?v=1575575895" alt="Fresh Greenery flowers">
-        <img url="https://cdn.shopify.com/s/files/1/0781/4423/files/01_9055a6ce-53f1-434a-8030-af8c0598eae9.jpg?v=1560932675" alt="Flowers in Vases">
+        <header>
+            <h1>Seasonal Flowers</h1>
+            <img src="img/greenery.jpg" alt="Fresh Greenery flowers">
+            <img src="img/roses.jpg" alt="Flowers in Vases">
+        </header>
+
+        <section class="full-width">
+            <h3>We Love Flowers</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>We Strive For Excellence</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <div class="half-width">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="half-width">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
     </body>
 </html>
